Please see http://www.poissonboltzmann.org/pdb2pqr/release-history

# These are notes for the current version of PDB2PQR

- NEW FEATURES
 
- BUG FIXES
 * Rolled back change that prevented plugins from interfering with each other. Large proteins would cause a stack overflow when trying to do a deep copy.
 * Updated INSTALL file to reflect no more need for Fortran.
 * Fixed apbs input file to match what web interface produces.
 * Added stderr and stdout to web error page. 
 * Fixed user specified mobile ion species not being passed to apbs input file.
 * Removed ambiguous A, ADE, C, CYT, G, GUA, T, THY, U, URA as possible residue names.