@@ -3,6 +3,8 @@ Please see http://www.poissonboltzmann.org/pdb2pqr/release-history
 # These are notes for the current version of PDB2PQR
 
 - NEW FEATURES
+ * A ligand file with duplicate atoms will cause pdb2pqr to stop instead of issue a warning.
+ * Improved error reporting.
  
 - BUG FIXES
  * Rolled back change that prevented plugins from interfering with each other. Large proteins would cause a stack overflow when trying to do a deep copy.
@@ -11,3 +13,5 @@ Please see http://www.poissonboltzmann.org/pdb2pqr/release-history
  * Added stderr and stdout to web error page. 
  * Fixed user specified mobile ion species not being passed to apbs input file.
  * Removed ambiguous A, ADE, C, CYT, G, GUA, T, THY, U, URA as possible residue names.
+ * Removed eval from pdb parsing routines.
+
